update setup configuration